--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "axios": "^0.24.0",
     "graphql": "^16.1.0",
+    "json-server": "^0.17.0",
+    "mongoose": "^6.1.3",
+    "mongoose-unique-validator": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
