--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "graphql": "^16.1.0",
     "json-server": "^0.17.0",
     "mongoose": "^6.1.3",
