--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "graphql": "^16.1.0",
     "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
     "mongoose-unique-validator": "^3.0.0",
     "uuid": "^8.3.2"
